Updated css Changed github fa icon Fixed fa icons cutoff + positioning

--- a/style.css
+++ b/style.css
@@ -172,6 +172,11 @@ h3{
 	font-weight:700;
 	font-size:5ch;
 }
+i{
+  margin-bottom:-2px;
+  line-height:18px;
+  padding-right:2px;
+}
 .project{
   overflow:hidden;
   display:none;
